src/tui/snapshots/pitboss__tui__app__tests__halted_80x20.snap
---
source: src/tui/app.rs
assertion_line: 616
expression: snap
---
pitboss  run 20260430T120000Z  branch pitboss/run-20260430T120000Z              
phase 02 — Domain types   [halted: plan tampered]                               
────────────────────────────────────────────────────────────────────────────────
┌ phases (0/3) ────────────────┐┌ agent output ────────────────────────────────┐
│· 01 Project foundation       ││[halt] phase 02: plan.md was modified by the  │
│x 02 Domain types  (1x)       ││agent                                         │
│· 03 Plan parser              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
└──────────────────────────────┘└──────────────────────────────────────────────┘
q quit   p pause   a abort
