src/tui/snapshots/pitboss__tui__app__tests__mid_run_120x30.snap
---
source: src/tui/app.rs
assertion_line: 600
expression: snap
---
pitboss  run 20260430T120000Z  branch pitboss/run-20260430T120000Z                                                      
phase 02 — Domain types   [implementer]                                                                                 
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ phases (1/3) ────────────────────────────────┐┌ agent output ────────────────────────────────────────────────────────┐
│+ 01 Project foundation  (1x)                 ││Reading plan.md                                                       │
│> 02 Domain types  (1x)                       ││Editing src/lib.rs                                                    │
│· 03 Plan parser                              ││[tests passed] 12 passed                                              │
│                                              ││[commit] phase 01: abc1234                                            │
│                                              ││Defining PhaseId                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
q quit   p pause   a abort
