src/tui/snapshots/pitboss__tui__app__tests__stale_items_panel.snap
---
source: src/tui/app.rs
expression: snap
---
pitboss  run 20260430T120000Z  branch pitboss/play/20260430T120000Z                                                     
phase 02 — Domain types   [implementer]                                                                                 
agent claude-code  model claude-opus-4-7                                                                                
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ phases (0/3) ────────────────────────────────┐┌ agent output ────────────────────────────────────────────────────────┐
│· 01 Project foundation                       ││                                                                      │
│> 02 Domain types  (1x)                       ││                                                                      │
│· 03 Plan parser                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
└──────────────────────────────────────────────┘│                                                                      │
┌ session ─────────────────────────────────────┐│                                                                      │
│ elapsed   5m 00s                             ││                                                                      │
│ cost      $0.00                              ││                                                                      │
│ tokens    0 / 0                              ││                                                                      │
│ dispatch  1                                  ││                                                                      │
│ by role                                      ││                                                                      │
│ impl 0/0 $0.00                               ││                                                                      │
│ fix  0/0 $0.00                               ││                                                                      │
│ aud  0/0 $0.00                               ││                                                                      │
└──────────────────────────────────────────────┘│                                                                      │
┌ stale items (2) ─────────────────────────────┐│                                                                      │
│ 4x polish error message in fixer             ││                                                                      │
│ 3x drop unused stub from prompts             ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
q quit   p pause   a abort
