src/tui/snapshots/pitboss__tui__app__tests__sweep_auditor.snap
---
source: src/tui/app.rs
assertion_line: 2000
expression: snap
---
pitboss  run 20260430T120000Z  branch pitboss/play/20260430T120000Z                                                     
Sweep after phase 01 — auditor   [sweep:auditor]                                                                        
agent claude-code  model claude-sonnet-4-6                                                                              
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ phases (1/3) ────────────────────────────────┐┌ agent output ────────────────────────────────────────────────────────┐
│+ 01 Project foundation  (3x)                 ││[commit] phase 01: abc1234                                            │
│· 02 Domain types                             ││[sweep] after phase 01: 3 pending                                     │
│· 03 Plan parser                              ││Reviewing sweep diff                                                  │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
└──────────────────────────────────────────────┘│                                                                      │
┌ session ─────────────────────────────────────┐│                                                                      │
│ elapsed   2m 20s                             ││                                                                      │
│ cost      $0.00                              ││                                                                      │
│ tokens    0 / 0                              ││                                                                      │
│ dispatch  3                                  ││                                                                      │
│ by role                                      ││                                                                      │
│ impl 0/0 $0.00                               ││                                                                      │
│ fix  0/0 $0.00                               ││                                                                      │
│ aud  0/0 $0.00                               ││                                                                      │
└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
q quit   p pause   a abort
