src/tui/snapshots/pitboss__tui__app__tests__sweep_completed.snap
---
source: src/tui/app.rs
assertion_line: 2017
expression: snap
---
pitboss  run 20260430T120000Z  branch pitboss/play/20260430T120000Z                                                     
phase 01 — Project foundation   [idle]                                                                                  
agent claude-code  model claude-opus-4-7                                                                                
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ phases (1/3) ────────────────────────────────┐┌ agent output ────────────────────────────────────────────────────────┐
│+ 01 Project foundation  (2x)                 ││[commit] phase 01: abc1234                                            │
│· 02 Domain types                             ││[sweep] after phase 01: 3 pending                                     │
│· 03 Plan parser                              ││[sweep] after 01: 3 items resolved (def5678)                          │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
└──────────────────────────────────────────────┘│                                                                      │
┌ session ─────────────────────────────────────┐│                                                                      │
│ elapsed   3m 00s                             ││                                                                      │
│ cost      $0.00                              ││                                                                      │
│ tokens    0 / 0                              ││                                                                      │
│ dispatch  2                                  ││                                                                      │
│ by role                                      ││                                                                      │
│ impl 0/0 $0.00                               ││                                                                      │
│ fix  0/0 $0.00                               ││                                                                      │
│ aud  0/0 $0.00                               ││                                                                      │
└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
q quit   p pause   a abort
