src/tui/snapshots/pitboss__tui__app__tests__sweep_halted.snap
---
source: src/tui/app.rs
expression: snap
---
pitboss  run 20260430T120000Z  branch pitboss/play/20260430T120000Z                                                     
phase 01 — Project foundation   [halted: tests failed]                                                                  
agent claude-code  model claude-opus-4-7                                                                                
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ phases (1/3) ────────────────────────────────┐┌ agent output ────────────────────────────────────────────────────────┐
│+ 01 Project foundation  (3x)                 ││[commit] phase 01: abc1234                                            │
│· 02 Domain types                             ││[sweep] after phase 01: 2 pending                                     │
│· 03 Plan parser                              ││[sweep:halt] after phase 01: tests failed: 12 failed                  │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
└──────────────────────────────────────────────┘│                                                                      │
┌ session ─────────────────────────────────────┐│                                                                      │
│ elapsed   3m 20s                             ││                                                                      │
│ cost      $0.00                              ││                                                                      │
│ tokens    0 / 0                              ││                                                                      │
│ dispatch  3                                  ││                                                                      │
│ by role                                      ││                                                                      │
│ impl 0/0 $0.00                               ││                                                                      │
│ fix  0/0 $0.00                               ││                                                                      │
│ aud  0/0 $0.00                               ││                                                                      │
└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
q quit   p pause   a abort
